--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,14 +27,24 @@ dist.dir=dist
 dist.jar=${dist.dir}/LostItemProject.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.apache-commons-net.jar=src\\lostitemproject\\apache-commons-net.jar
+file.reference.apache-commons-net.jar-1=build\\classes\\apache-commons-net.jar
 file.reference.commons-io-2.5.jar=..\\..\\LostItemKanameTest\\lib\\commons-io-2.5.jar
 file.reference.commons-net-3.6.jar=..\\..\\LostItemKanameTest\\lib\\commons-net-3.6.jar
+file.reference.LGoodDatePicker-8.3.0.jar=build/classes/LGoodDatePicker-8.3.0.jar
+file.reference.org.apache.commons.io.jar=src\\lostitemproject\\org.apache.commons.io.jar
+file.reference.org.apache.commons.io.jar-1=build\\classes\\org.apache.commons.io.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-io-2.5.jar}:\
-    ${file.reference.commons-net-3.6.jar}
+    ${file.reference.commons-net-3.6.jar}:\
+    ${file.reference.apache-commons-net.jar}:\
+    ${file.reference.org.apache.commons.io.jar}:\
+    ${file.reference.apache-commons-net.jar-1}:\
+    ${file.reference.org.apache.commons.io.jar-1}:\
+    ${file.reference.LGoodDatePicker-8.3.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
