--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,12 +29,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.apache-commons-net.jar=src\\lostitemproject\\apache-commons-net.jar
 file.reference.apache-commons-net.jar-1=build\\classes\\apache-commons-net.jar
+file.reference.apache-commons-net.jar-2=nbproject\\apache-commons-net.jar
 file.reference.commons-io-2.5.jar=..\\..\\LostItemKanameTest\\lib\\commons-io-2.5.jar
 file.reference.commons-io-2.5.jar-1=..\\..\\..\\..\\Downloads\\commons-io-2.5.jar
 file.reference.commons-net-3.6.jar=..\\..\\LostItemKanameTest\\lib\\commons-net-3.6.jar
+file.reference.jcalendar-1.4.jar=nbproject\\jcalendar-1.4.jar
 file.reference.LGoodDatePicker-8.3.0.jar=build/classes/LGoodDatePicker-8.3.0.jar
+file.reference.LGoodDatePicker-8.3.0.jar-1=nbproject\\LGoodDatePicker-8.3.0.jar
 file.reference.org.apache.commons.io.jar=src\\lostitemproject\\org.apache.commons.io.jar
 file.reference.org.apache.commons.io.jar-1=build\\classes\\org.apache.commons.io.jar
+file.reference.org.apache.commons.io.jar-2=nbproject\\org.apache.commons.io.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -45,7 +49,11 @@ javac.classpath=\
     ${file.reference.org.apache.commons.io.jar}:\
     ${file.reference.apache-commons-net.jar-1}:\
     ${file.reference.org.apache.commons.io.jar-1}:\
-    ${file.reference.LGoodDatePicker-8.3.0.jar}
+    ${file.reference.LGoodDatePicker-8.3.0.jar}:\
+    ${file.reference.LGoodDatePicker-8.3.0.jar-1}:\
+    ${file.reference.apache-commons-net.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.org.apache.commons.io.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
