debug date , viewitempage tell info clearly

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -53,7 +53,8 @@ javac.classpath=\
     ${file.reference.LGoodDatePicker-8.3.0.jar-1}:\
     ${file.reference.apache-commons-net.jar-2}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.org.apache.commons.io.jar-2}
+    ${file.reference.org.apache.commons.io.jar-2}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
