add LostItem can select many location

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,6 @@ file.reference.org.apache.commons.io.jar-2=nbproject\\org.apache.commons.io.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.MySQLDriver.classpath}:\
     ${file.reference.commons-io-2.5.jar}:\
     ${file.reference.commons-net-3.6.jar}:\
     ${file.reference.apache-commons-net.jar}:\
@@ -53,8 +52,10 @@ javac.classpath=\
     ${file.reference.LGoodDatePicker-8.3.0.jar-1}:\
     ${file.reference.apache-commons-net.jar-2}:\
     ${file.reference.jcalendar-1.4.jar}:\
+    ${libs.absolutelayout.classpath}:\
+    ${libs.MySQLDriver.classpath}
     ${file.reference.org.apache.commons.io.jar-2}:\
-    ${libs.absolutelayout.classpath}
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
